# libhal

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
.github/workflows/: ci.yml  docs.yml
cross/: ci-cross.txt  ci-native.txt  cortex-m0plus_cross.txt  cortex-m33_cross.txt  cortex-m3_cross.txt  cortex-m4_cross.txt  cortex-m55_cross.txt  cortex-m7_cross.txt  native.txt  stm32f103.txt  toolchain.txt
docs/: Doxyfile.in  index.adoc  intro.adoc  meson.build  roadmap.adoc  status.adoc
include/libhal/: startup.hpp  units.hpp
include/libhal/buses/: i2c_bus.hpp  spi_bus.hpp  usart_bus.hpp
include/libhal/devices/: i2c_bus.hpp  iopin.hpp  mcp4821.hpp  pca9555.hpp
include/libhal/mcu/stm32f0/: clock.hpp  gpio.hpp
include/libhal/mcu/stm32f1/: clock.hpp  gpio.hpp
include/libhal/mcu/stm32f2/: clock.hpp  gpio.hpp
include/libhal/mcu/stm32f3/: clock.hpp  gpio.hpp
include/libhal/mcu/stm32f4/: adc.hpp  can.hpp  clock.hpp  dac.hpp  gpio.hpp  i2c.hpp  spi.hpp  timer.hpp  usart.hpp
include/libhal/mcu/stm32f7/: clock.hpp  gpio.hpp
include/libhal/mcu/stm32h5/: clock.hpp  gpio.hpp
include/libhal/mcu/stm32h7/: clock.hpp  gpio.hpp
include/libhal/peripherals/: adc.hpp  can.hpp  dac.hpp  eth.hpp  gpio.hpp  i2c.hpp  i2s.hpp  rcc.hpp  spi.hpp  timer.hpp  usart.hpp  usb.hpp
include/libhal/utils/: access.hpp  bittypes.hpp  ringbuffer.hpp  units.hpp
ioc/: stm32F103RCtx.ioc  stm32F207vetx.ioc
linker/: linker.ld.in
renode/: platform.repl.in  test.resc.in  test.robot.in
scripts/: ioc-parse.py
src/: semihosting.cpp  startup.cpp
src/startup/: meson.build  startup-armv6.cpp  startup-armv7.cpp  startup-armv8.cpp
subprojects/: compile-time-init-build.wrap  cpp-std-extensions.wrap  stm32.wrap  ut.wrap
tests/: meson.build  t1.cpp  units.cpp
